# Depin-go

./: README.md  app.json  package-lock.json  package.json
app/: _layout.tsx
app/(tabs)/: _layout.tsx  explore.tsx  index.tsx  proofs.tsx
contracts/sensor-verification/: Cargo.toml  lib.rs
src/components/: ProofsList.tsx  SensorCard.tsx  WalletConnect.tsx
src/context/: MWAContext.tsx
src/hooks/: useDePIN.ts  useMWA.ts  useProofSubmission.ts  useSensorProof.ts
src/providers/: SolanaProvider.tsx
src/sdk/: index.ts
src/sdk/crypto/: ProofGenerator.ts  SeedVaultSigner.ts
src/sdk/sensors/: AccelerometerProof.ts  BarometerProof.ts  GPSProof.ts  GyroscopeProof.ts  MagnetometerProof.ts  NetworkSpeedProof.ts  SensorManager.ts
src/sdk/storage/: ProofStorage.ts
src/types/: index.ts
src/utils/: constants.ts  proof-helpers.ts  solana.ts
