[package]
name = "sensor-verification"
version = "0.1.0"
description = "DePIN-Go sensor proof verification program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sensor_verification"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"